2005-11-16  Vladimir Krasnov  <vladimirk@mainsoft.com>
	
	* XmlReflectionImporter.cs: fixed field order returned by 
	reflection in method GetReflectionMembers. TARGET_JVM only.

2005-11-07  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSchemaImporter.cs: Added support for restrictions with
	embedded simple type definitions. 

2005-11-04  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlElementAttribute.cs : gimme Order; it fixes 100 or more
	  sys.xml.schema corcompare diffs.

2005-10-17  Lluis Sanchez Gual  <lluis@novell.com>

	* SerializationCodeGenerator.cs: 
	* XmlSerializationWriterInterpreter.cs: Arrays of XmlNode don't
	need to be all XmlElments. Fix by Atsushi for bug #76288.

2005-09-26  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlTypeMapping.cs: Added ChoiceMember to ListMap.
	In ListMap.FindElement, take into account the ChoiceMember
	if set.
	* SerializationCodeGenerator.cs:
	* XmlSerializationReaderInterpreter.cs: For lists with a choice
	member, fill the member with the corresponding enum values.
	* XmlReflectionImporter.cs: Properly reflect the choice member
	when applied to a list.
	* XmlSerializationWriterInterpreter.cs: Track class changes.
	* XmlTypeMapMemberElement.cs: Added ChoiceTypeData property.
	All this fixes bug #76203.

2005-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* SoapReflectionImporter.cs: Check the correct defaults
	for attributes.

2005-09-21  Lluis Sanchez Gual  <lluis@novell.com>  

	* SerializationSource.cs: Fix nullref.
	* XmlReflectionImporter.cs: When registering a type using
	IncludeType(), make sure it is added as a subtype and the
	map for typeof(object) if it has already been imported.
	Fixes bug #76049.

2005-09-21  Lluis Sanchez Gual  <lluis@novell.com> 

	* XmlSerializationWriter.cs: Also internally serialize
	arrays of object (see previous change).

2005-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSerializationWriter.cs: Properly serialize arrays
	of primitive types when not explicitely specified in